demo2-assets/pacman/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pacman
  name: pacman
  namespace: pacman-game-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: pacman
  sessionAffinity: None
  type: ClusterIP
